--- a/backend/package.json
+++ b/backend/package.json
@@ -9,17 +9,19 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
-    "@types/jsonwebtoken": "^8.3.9",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.0.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.24",
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/multer": "^1.4.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
