--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.0.2",
@@ -20,10 +21,10 @@
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.3.9",
-    "@types/multer": "^1.4.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/multer": "^1.4.2",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^5.16.0",
