Componentize button and input which will be used in different places of the application and create sign up layout - just without any function

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -36,7 +36,9 @@
       "import/prefer-default-export": "off",
       "import/extensions": ["error", "ignorePackages", { "ts": "never", "tsx": "never" }],
       "@typescript-eslint/explicit-function-return-type": [ "error", { "allowExpressions": true } ],
-      "react/jsx-one-expression-per-line": ["off"]
+      "react/jsx-one-expression-per-line": ["off"],
+      "react/jsx-props-no-spreading": "off",
+      "react/prop-types": "off"
     },
     "settings": { "import/resolver": { "typescript": { } } }
 }
