--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -38,6 +38,7 @@
       "@typescript-eslint/explicit-function-return-type": [ "error", { "allowExpressions": true } ],
       "react/jsx-one-expression-per-line": ["off"],
       "react/jsx-props-no-spreading": "off",
+      "no-unused-expressions": "off",
       "react/prop-types": "off"
     },
     "settings": { "import/resolver": { "typescript": { } } }
