Isolate service layer (model layer) from infra related code creating abstractions - only for create appointment

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -23,11 +23,13 @@
         "prettier"
     ],
     "rules": {
-      "prettier/prettier": "error",
+      "prettier/prettier": ["error", {"printWidth": 120}],
       "class-methods-use-this": "off",
       "@typescript-eslint/no-unused-vars": ["error", {
         "argsIgnorePattern": "_"
       }],
+      "no-useless-constructor": "off",
+      "@typescript-eslint/interface-name-prefix": ["error", {"prefixWithI": "always"}],
       "import/extensions": [
         "error",
         "ignorePackages",
