Add class-transformer dependency to help hide sensitive information and create dynamic attributes when returning responses (example: hide password from users and create dynamic avatar url based on environment)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,4 @@
 // and this is a sample file with all the env variables which must be configured by environment.
 APP_SECRET=
 APP_WEB_URL=http://localhost:3000
+APP_API_URL=http://localhost:3333
