Add aws-sdk to send email using SES, create SESEmailProvider and configure application to support both, mail in dev with ethereal and prod with ses.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,15 @@
 // The config file should be named only .env - as it contains sensitive information, and is not version in the SCM
 // and this is a sample file with all the env variables which must be configured by environment.
-APP_SECRET=
+JWT_SECRET=
+
+// Static content server address
 APP_WEB_URL=http://localhost:3000
+// API server address
 APP_API_URL=http://localhost:3333
+
+// Mail provider (ethereal for dev and ses for prod)
+MAIL_DRIVER=ethereal
+// when using ses, configure prod credentials - by default, nodemailer and aws-sdk look for env configs,
+// hence, no extra configs needed on code level
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
