Create provider to upload images to amazon s3 in prod environment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,3 +13,7 @@ MAIL_DRIVER=ethereal
 // hence, no extra configs needed on code level
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+// s3 or disk
+STORAGE_DRIVER=disk
+AWS_BUCKET=
