--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "pg": "^8.0.2",
+    "rate-limiter-flexible": "^2.1.6",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.2.0",
     "typeorm": "^0.2.24",
